# DutyCube

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.MD  compile_commands.json
data/config/: ui.cfg
data/config/ui/: fkey.cfg  scoreboard.cfg  style.cfg
data/media/interface/font/: default_outline.cfg
data/media/interface/hud/: items.xcf
data/media/map/: ac_riverside2.info.cfg  alphacorp.info.cfg  complex.info.cfg  ot.info.cfg  reflection.info.cfg  steelribs.info.cfg  test_anim.info.cfg  test_ctf.info.cfg  test_model.info.cfg  turbine.info.cfg  waterworks.info.cfg
data/media/map/ac_riverside2/: ReadMe.txt  Thumbs.db  ac_riverside2.cfg  ac_riverside2.cgz
data/media/model/hudgun/ak47/: ak47.md5mesh  ak47_idle.md5anim  ak47_shoot.md5anim  hands_ak47_idle.md5anim  hands_ak47_idle_zoom.md5anim  hands_ak47_shoot.md5anim  hands_ak47_shoot_zoom.md5anim  hands_ak47_zoom_in.md5anim  hands_ak47_zoom_out.md5anim  hands_gl_idle_zoom.md5anim  hands_gl_shoot_zoom.md5anim  hands_gl_zoom_in.md5anim  hands_gl_zoom_out.md5anim  hands_revolver_idle_zoom.md5anim  hands_revolver_shoot_zoom.md5anim  hands_revolver_zoom_in.md5anim  hands_revolver_zoom_out.md5anim  hands_rifle_idle_zoom.md5anim  hands_rifle_shoot_zoom.md5anim  hands_rifle_zoom_in.md5anim  hands_rifle_zoom_out.md5anim  hands_shotgun_idle_zoom.md5anim  hands_shotgun_shoot_zoom.md5anim  hands_shotgun_zoom_in.md5anim  hands_shotgun_zoom_out.md5anim  md5.cfg
src/: CMakeLists.txt
src/engine/: aa.cpp  animmodel.h  bih.cpp  bih.h  blend.cpp  client.cpp  console.cpp  dynlight.cpp  engine.h  explosion.h  grass.cpp  hitzone.h  lensflare.h  light.cpp  light.h  lightning.h  main.cpp  master.cpp  material.cpp  menus.cpp  model.h  movie.cpp  mpr.h  normal.cpp  octa.cpp  octa.h  octaedit.cpp  octarender.cpp  physics.cpp  pvs.cpp  ragdoll.h  rendergl.cpp  renderlights.cpp  rendermodel.cpp  renderparticles.cpp  rendersky.cpp  rendertext.cpp  renderva.cpp  scale.h  server.cpp  (+12 more)
src/game/: ai.cpp  ai.h  aiman.h  client.cpp  ctf.h  entities.cpp  extinfo.h  game.cpp  game.h  render.cpp  scoreboard.cpp  server.cpp  waypoint.cpp  weapon.cpp
src/scripts/: runclient.sh.in
src/shared/: command.h  crypto.cpp  ents.h  geom.cpp  geom.h  glemu.cpp  glemu.h  glexts.h  iengine.h  igame.h  stream.cpp  tessfont.c  tools.cpp  tools.h  zip.cpp
